adding question page

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -6,6 +6,8 @@
 
 <h1>{{title}}</h1>
 <p>{{instructions}}</p>
-<button>Start Survey</button>
+<a href="/questions/<int:id>">
+  <button>Start Survey</button>
+</a>
 
 {% endblock %}
