adding answers route

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -6,7 +6,7 @@
 
 <h1>{{title}}</h1>
 <p>{{instructions}}</p>
-<a href="/questions/<int:id>">
+<a href="/questions/0">
   <button>Start Survey</button>
 </a>
 
