--- a/templates/question.html
+++ b/templates/question.html
@@ -5,11 +5,12 @@
 {% block content %} 
 
 <h1>{{question}}</h1>
-
-{% for choice in choices %}
-<input type="radio" value="{{choice}}">
-<label for="{{choice}}">{{choice}}</label><br>
-{% endfor %}
-
+<form action="/answer" method="POST">
+  {% for choice in choices %}
+  <input type="radio" value="{{choice}}" name="answer">
+  <label for="{{choice}}">{{choice}}</label><br>
+  {% endfor %}
+  <button type="submit">Next</button>
+</form>
 
 {% endblock %}
