--- a/templates/question.html
+++ b/templates/question.html
@@ -4,6 +4,10 @@
 
 {% block content %} 
 
+{% for msg in get_flashed_messages() %}
+  <p>{{ msg }}</p>
+{% endfor %}
+
 <h1>{{question}}</h1>
 <form action="/answer" method="POST">
   {% for choice in choices %}
