--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -6,8 +6,9 @@
 
 <h1>{{title}}</h1>
 <p>{{instructions}}</p>
-<a href="/questions/0">
+
+<form action="/session-responses" method="POST">
   <button>Start Survey</button>
-</a>
+</form>
 
 {% endblock %}
